--- a/homepage.html
+++ b/homepage.html
@@ -3,12 +3,31 @@
 <html>
 <head>
     <link rel="stylesheet" href="styles.css">
+    <title>CS490 - Assignment 2</title>
 </head>
 <body>
-
-<div class="example1">
-    <h3>LeBron sets tone at Cavs media day | Rajon Rondo breaks hand in fall | LeBron: Patience is key for Cavs | Jackson: Knicks can make playoffs | Grizzlies sign F Michael Beasley |
-    </h3>
+<div class="latest-block">
+    <span>Latest</span>
+</div>
+<marquee class="my-border" width="82%" behavior="scroll" direction="left" scrollamount="10" onmouseover="this.stop();" onmouseleave="this.start();">
+    <a class="scroll-item">LeBron sets tone at Cavs media day<img class="img-nba" src="images/nba.jpg"></a>
+    <a class="scroll-item">Rajon Rondo breaks hand in fall<img class="img-nba" src="images/nba.jpg"></a>
+    <a class="scroll-item">LeBron: Patience is key for Cavs<img class="img-nba" src="images/nba.jpg"></a>
+    <a class="scroll-item">Jackson: Knicks can make playoffs<img class="img-nba" src="images/nba.jpg"></a>
+    <a class="scroll-item">Grizzlies sign F Michael Beasley<img class="img-nba" src="images/nba.jpg"></a>
+</marquee>
+<div class="details">
+    <p class="title">LeBron sets tone at Cavs media day</p>
+    <p class="date">September 27, 2014</p>
+        <p width="400px">INDEPENDENCE, Ohio -- The satellite trucks started lining up for a
+            spot close to the Cleveland Cavaliers' training facility early Friday morning.
+            A huge tent was erected onsite as a temporary media workroom to accommodate the hundreds of reporters on hand for LeBron James' official return to the Cavs.
+            He never did have a news conference this summer, if you remember.
+            So whatever party the city of Cleveland was going to throw to celebrate the return of its prodigal son had to be Friday.</p>
+    <div class="photo">
+        <img src="images/lebron.jpg" width=200 height=200 alt="">
+        <div class="description">LeBron James</div>
+    </div>
 </div>
 </body>
 </html>
